--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,3 +40,12 @@
 .total td, .total p {
   font-weight: 500;
 }
+
+thead {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+thead :last-child th {
+    border-bottom: double !important;
+}
