Include quantity estimate on parents
Signed-off-by: John Gomersall <thegoms@gmail.com>

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -49,3 +49,7 @@ thead {
 thead :last-child th {
     border-bottom: double !important;
 }
+.parent {
+  background-color: #eee;
+  font-style: italic;
+}
