feat: Remove specific water loss per ingredient for SciPy and improve accuracy (#104)
Signed-off-by: John Gomersall <thegoms@gmail.com>

### What
- Don't track water loss by ingredient. Just allow total mass to be more
than 100g
- Switch to the DIRECT optimization model to avoid local minima
- Add tighter bounds based on ingredient order
- Ignore unmatched ingredients when calculating nutrient variance
- Ingrease weighting for some nutrients

---------

Signed-off-by: John Gomersall <thegoms@gmail.com>

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,3 +40,16 @@
 .total td, .total p {
   font-weight: 500;
 }
+
+thead {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+thead :last-child th {
+    border-bottom: double !important;
+}
+.parent {
+  background-color: #eee;
+  font-style: italic;
+}
